# FQsolver

./: .gitignore  CMakeLists.txt  README.md  setup.sh
cmake/: ConfigTesting.cmake  TestsFQSolver.cmake
src/: CMakeLists.txt  main.cpp
src/algorithm/: algorithm.cpp  algorithm.hpp
src/density_nanoparticle/: density.cpp  density.hpp  integrals.cpp  integrals.hpp  nanoparticle.cpp  nanoparticle.hpp
src/density_solvent/: density.cpp  density.hpp  integrals.cpp  integrals.hpp  solvent.cpp  solvent.hpp
src/input_output/: input.cpp  input.hpp  output.cpp  output.hpp
src/pol_embed/: fq.cpp  fq.hpp
src/tools/: enum.hpp  parameters.cpp  parameters.hpp  string_manipulation.cpp  string_manipulation.hpp  target.hpp  timer.cpp  timer.hpp
tests/: runtest.py  test
tests/field_from_density/: field_from_density.inp  test
tests/field_from_density/reference/FQSolver_results/: field_from_density_fld.txt
tests/field_from_density/solvent/: water_solvent.xyz
tests/fq_from_density/: dmatrix  fq_from_density.inp  potential_from_density.inp  rhs_from_adf  test
tests/fq_from_density/FQSolver_results/: fq_from_density_charges.txt  potential_from_density_pot.txt
tests/integrate_density/: test
tests/potential_field_from_density/: potential_field_from_density.inp
tests/potential_field_from_density/reference/FQSolver_results/: potential_field_from_density_pot_fld.txt
tests/potential_field_from_density_PDB/: potential_field_from_density.inp  test
tests/potential_field_from_density_PDB/reference/FQSolver_results/: potential_field_from_density_pot_fld.txt
tests/potential_from_density/: h2.xyz  potential_from_density.inp  test  test.cube
tests/potential_from_density/molecules/: water.xyz
tests/potential_from_density/reference/FQSolver_results/: potential_from_density_pot.txt
